@@ -8,6 +8,7 @@ plugins {
 // 하위 모든 모듈에서 사용할 spring-boot에 의존성이 없는 dependency에 대한 버전 관리용
 ext {
 	set('logstashEncoderVersion', '7.4')
+	set('jakartaServletApiVersion', '6.0.0')
 }
 
 group = 'com.rihee.alerting'
@@ -58,7 +59,8 @@ subprojects {
 	}
 	
 	tasks.named('test', Test).configure {
-		test.useJUnitPlatform()
+		useJUnitPlatform()
+		jvmArgs += "-XX:+EnableDynamicAgentLoading"
 	}
 	
 }
